test/src/e2e_vm_tests/test_programs/should_fail/parser_generic_turbo_fish_prefix/src/main.sw
script;

struct S<T> {
    x: T,
}

fn main() {
    let x: <u8>::S::<u8> = S::<u8>{x: 8};
}